# mdsnap

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: report.md
scripts/: provenance-demo.sh
src/: assets.rs  git_info.rs  main.rs  markdown.rs  provenance.rs  snapshot.rs
tests/: cli.rs
