[package]
name = "mdsnap"
version = "0.1.0"
edition = "2021"
description = "Bundle a Markdown report with its referenced assets and a reproducible git snapshot"
license = "MIT"
repository = "https://github.com/intervall-ludger/mdsnap"

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
